# Retro-R1

./: .gitignore  README.md  Retro-r1-README.md  experiments_mlp_one_step.ipynb  main.py  pyproject.toml
agent_r1/tool/tools/: __init__.py
data/reaction_pathway_search/: validation_chembl_1000.parquet  validation_retro_190.parquet
examples/data_preprocess/: reaction.py
scripts/: experiments_mlp_one_step.py  visualize_experiments_mlp.py
