[project]
name = "retro-r1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets==3.4.1",
    "numpy<2",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "rdkit==2024.3.2",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "rdchiral",
    "mlp_retrosyn",
]

[tool.uv.sources]
rdchiral = { path = "packages/rdchiral", editable = true }
mlp_retrosyn = { path = "packages/mlp_retrosyn", editable = true }

[dependency-groups]
dev = [
    "matplotlib>=3.8.0",
    "pytest>=9.0.3",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]
